tests/cases/ownership/ok/ownership-vector-element-move.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn consume(value: own i64) -> i64 {
  drop value;
  return 8;
}

fn main() -> i64 {
  var values: Vec[own i64] = [make_owned(1), make_owned(2)];
  let second = values[1];
  let score = consume(second);
  values[1] = make_owned(3);
  drop values;
  return score;
}
