tests/cases/ownership/errors/forget-non-owner.ari
fn main() -> i64 {
  let value: i64 = 1;
  forget value;
  return value;
}
